cabal-version:       2.2
name:                ihp-zip
version:             0.0.1
synopsis:            ihp-zip
description:         Support for making ZIP Archives with IHP
license:             NONE
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          hello@digitallyinduced.com
build-type:          Simple

library
    build-depends: zip-archive, ihp, wai, http-types
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , Rank2Types
        , NamedFieldPuns
        , TypeSynonymInstances
        , FlexibleInstances
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , FlexibleContexts
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , ScopedTypeVariables
        , RecordWildCards
        , TypeApplications
        , DataKinds
        , InstanceSigs
        , DeriveGeneric
        , MultiParamTypeClasses
        , TypeOperators
        , DeriveDataTypeable
        , DefaultSignatures
        , BangPatterns
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
        , StandaloneDeriving
    hs-source-dirs: .
    exposed-modules:
        IHP.Zip.ControllerFunctions