cabal-version:       2.2
name:                ihp-zip
version:             0.1.1
synopsis:            Support for making ZIP archives with IHP
description:         Provides the @renderZip@ / @renderZipUnnamed@ controller
                     helpers for streaming a @Codec.Archive.Zip.Archive@
                     back to the browser as the response of an IHP action.
license:             MIT
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          hello@digitallyinduced.com
homepage:            https://ihp.digitallyinduced.com/
bug-reports:         https://github.com/digitallyinduced/ihp-zip/issues
copyright:           (c) digitally induced GmbH
category:            Web, IHP
build-type:          Simple
extra-source-files:  README.md

source-repository head
    type:     git
    location: https://github.com/digitallyinduced/ihp-zip

library
    default-language: GHC2021
    build-depends:
          base        >= 4.17 && < 4.22
        , ihp         >= 1.5  && < 2
        , zip-archive >= 0.4  && < 0.5
        , wai         >= 3.2  && < 3.3
        , http-types  >= 0.12 && < 0.13
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , Rank2Types
        , NamedFieldPuns
        , TypeSynonymInstances
        , FlexibleInstances
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , FlexibleContexts
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , ScopedTypeVariables
        , RecordWildCards
        , TypeApplications
        , InstanceSigs
        , DeriveGeneric
        , MultiParamTypeClasses
        , TypeOperators
        , DeriveDataTypeable
        , DefaultSignatures
        , BangPatterns
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
        , StandaloneDeriving
    hs-source-dirs: .
    exposed-modules:
        IHP.Zip.ControllerFunctions
